# hse-backend

./: CLAUDE.md  TODO.md  appeals.json  db.db  main.py  pyproject.toml
app/: database.py  dependencies.py
app/api/: appeals.py  students.py
app/models/: student.py
app/repositoreis/: student_repository.py
app/schemas/: student.py
app/services/: student_service.py
tests/: test_hw1_calculate.py  test_hw2_appeals.py  test_hw4_database.py  test_hw5_crud.py  test_hw7_auth.py  test_hw8_background.py  test_student_repository.py
